--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -157,7 +157,7 @@ en:
       consider sharing the video with the group directly, so that your students or participants can get better understand
       the project before you share their own results with them.
       <br/><br/>
-      <a href="/public/GOFOX_lecture_slides.pptx" title="Download slide-deck">Download Slide-deck</a> 
+      <a href="/public/GOFOX_lecture_slides.pptx" title="Download slide-deck">Download Slide-deck</a>
 
       <br/><br/>
       This slide-deck covers similar material to the video above. You are welcome to use it as it is, or to edit it
@@ -166,16 +166,16 @@ en:
     -
       link: 'Ideas for GO-FOX group activities'
       title: 'Ideas for GO-FOX group activities'
-      content: "<p>
+      content: '<p>
       <a href="/public/GOFOX_facilitation_slides.pptx" title="Download Facilitation Slide-deck">Download Facilitation Slide-deck</a>
-      <a href="/public/GOFOX_facilitation_guide.pdf" title="Download Facilitation Guide">Download Facilitation Guide</a> 
+      <a href="/public/GOFOX_facilitation_guide.pdf" title="Download Facilitation Guide">Download Facilitation Guide</a>
       <br/>
       <br/>
       GO-FOX can be used in a facilitated workshop setting, either before or after the group have taken the online
       survey. Click the link above to download a full facilitation guide designed for two specific scenarios –
       “team building” and “organisational values and mission”. These activities can also work well in a student
       teaching context.
-      </p>"
+      </p>'
 
   support:
     -
