--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -30,6 +30,33 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
+  buttons:
+    accept: Accept
+    get_results: Get results
+    next: Next
+    previous: Previous
+    take_survey: Take the Survey
+
+  nav:
+    about_project: About the Project
+    about_debate: About the Debate
+    about_gofox: About GO-FOX
+    log_in: Log in
+    home: Home
+
+  pagination:
+    of: "Of"
+    page: Page
+    tooltip: "You are ${count} pages away from finding out your results. Required questions are marked with *."
+  
+  validation:
+    complete_questions: Please complete the questions highlighted below to continue.
+    select_option: Please select an option below.
+    select_at_least_one: Please select at least one option below.
+  
+  social:
+    header: Share the survey
+
   login:
     -
       title: 'Create a survey'
@@ -343,6 +370,17 @@ es:
       <p><em>Ecocentrismo y mercados:</em></p>
       <ul class="static-page__bibliography-list"><li>Wilson, E.O. Half-Earth: Our Planet’s Fight for Life. New York: Liveright Publishing Corporation, 2016.</li></ul>'
   results:
+    header: Your results
+    chart:
+      less: Less
+      more: More
+      dimensions:
+        people: People-centred conservation
+        science: Science-led ecocentrism
+        capitalism: Conservation through capitalism
+    contact:
+      title: Contact
+      email_message: 'For more information about The Future of Conservation project please email:'
     title: "Cómo interpretar sus resultados"
     content: '<p>
     El gráfico representa sus puntos de vista (los puntos y líneas gruesos) sobre tres ejes. Dichos ejes representan las tres principales dimensiones del debate del futuro de la conservación que identificamos a partir de las respuestas de 9.264 conservacionistas provenientes de 149 países. Las tres dimensiones son: ‘conservación centrada en las personas’ (sobre el papel que las personas deben tener en la conservación), ‘ecocentrismo científico’ (sobre el papel de la ciencia en la protección de las especies y ecosistemas), y ‘conservación a través del capitalismo’ (el papel de las corporaciones y las herramientas de mercado en la conservación).
