--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,25 +30,60 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  questions:
-    answers:
-      strongly_disagree: 'Strongly Disagree'
-      disagree: 'Disagree'
-      slightly_disagree: 'Slightly Disagree'
-      neither_agree_nor_disagree: 'Neither Agree nor Disagree'
-      slightly_agree: 'Slightly Agree'
-      agree: 'Agree'
-      strongly_agree: 'Strongly Agree'
-  demographic_questions:
-    answers:
-      age:
-        text: 'What is your age?'
-      gender:
-        text: 'Select your gender?'
-        male: 'Male'
-        female: 'Female'
-        other: 'Other'
-        prefer_not_to_say: 'Prefer not to say'
+  questions_options:
+    'Strongly Disagree': 'Strongly Disagree'
+    'Disagree': 'Disagree'
+    'Slightly Disagree': 'Slightly Disagree'
+    'Neither Agree nor Disagree': 'Neither Agree nor Disagree'
+    'Slightly Agree': 'Slightly Agree'
+    'Agree': 'Agree'
+    'Strongly Agree': 'Strongly Agree'
+    'Male': 'Male'
+    'Female': 'Female'
+    'Other': 'Other'
+    'Prefer not to say': 'Prefer not to say'
+    "School level": "School level"
+    "Post-high school, but at an institution other than a university": "Post-high school, but at an institution other than a university"
+    "Undergraduate/bachelors university degree": "Undergraduate/bachelors university degree"
+    "Masters degree/postgraduate qualification": "Masters degree/postgraduate qualification"
+    "Doctorate": "Doctorate"
+    'Biological sciences (e.g. zoology, plant sciences)': 'Biological sciences (e.g. zoology, plant sciences)'
+    "Non-biological natural sciences (e.g. chemistry, maths, engineering)": "Non-biological natural sciences (e.g. chemistry, maths, engineering)"
+    "Social sciences (e.g. economics, human geography, political science)": "Social sciences (e.g. economics, human geography, political science)"
+    "Humanities (e.g. literature, history, philosophy, languages)": "Humanities (e.g. literature, history, philosophy, languages)"
+    "Interdisciplinary (a combination of at least two of natural science, social science and humanities)": "Interdisciplinary (a combination of at least two of natural science, social science and humanities)"
+    "Not applicable": "Not applicable"
+    "Academia/educational institution": "Academia/educational institution"
+    "Not for profit/non governmental organisation": "Not for profit/non governmental organisation"
+    "Private sector": "Private sector"
+    "Government": "Government"
+    "Yes": "Yes"
+    "No": "No"
+    "Exclusively a researcher": "Exclusively a researcher"
+    "Mostly a researcher": "Mostly a researcher"
+    "Both a researcher and practitioner": "Both a researcher and practitioner"
+    "Mostly a practitioner": "Mostly a practitioner"
+    "Exclusively a practitioner": "Exclusively a practitioner"
+    "Very junior position": "Very junior position"
+    "Fairly junior position": "Fairly junior position"
+    "Neither senior nor junior position": "Neither senior nor junior position"
+    "Fairly senior position": "Fairly senior position"
+    "Very senior position": "Very senior position"
+    "I am not currently working in conservation": "I am not currently working in conservation"
+    "Very heavily modified ecosystems (e.g. urban areas)": "Very heavily modified ecosystems (e.g. urban areas)"
+    "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)": "Largely modified ecosystems (e.g. intensive farmland, intensive fisheries)"
+    "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)": "Somewhat modified ecosystems (e.g. low intensity farmland, low intensity fisheries)"
+    "Largely unmodified ecosystems (e.g. sustainable use area)": "Largely unmodified ecosystems (e.g. sustainable use area)"
+    "Unmodified or very little modified ecosystem (e.g. wilderness areas)": "Unmodified or very little modified ecosystem (e.g. wilderness areas)"
+    "Yes, as a researcher": "Yes, as a researcher"
+    "Yes, as a practitioner": "Yes, as a practitioner"
+    "Yes, both as a researcher and as a practitioner": "Yes, both as a researcher and as a practitioner"
+    "Values of family and friends during childhood": "Values of family and friends during childhood"
+    "Outdoor play/recreation during childhood": "Outdoor play/recreation during childhood"
+    "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood"
+    "Formal education experience (e.g. field trip, classroom session) during childhood": "Formal education experience (e.g. field trip, classroom session) during childhood"
+    "Professional experience during adulthood": "Professional experience during adulthood"
+    "None of the above": "None of the above"
 
   buttons:
     accept: Accept
@@ -68,12 +103,12 @@ en:
     of: "Of"
     page: Page
     tooltip: "You are ${count} pages away from finding out your results. Required questions are marked with *."
-  
+
   validation:
     complete_questions: Please complete the questions highlighted below to continue.
     select_option: Please select an option below.
     select_at_least_one: Please select at least one option below.
-  
+
   social:
     header: Share the survey
 
@@ -110,12 +145,12 @@ en:
       -
         title: 'Research and publications'
         description: "Data from the Future of Conservation survey have been used to identify the values held by conservationists, and how these relate to their backgrounds (such as nationality, educational background, or experience of different ecosystems). The <a href='https://www.nature.com/articles/s41893-019-0267-5' title='Visit the paper in Nature Sustainability' target='_blank'>first paper from this research</a> has been published in Nature Sustainability. The <a href='https://wordpress.com/post/thinkinglikeahuman.com/458' title=\"Visit the Authors' Accepted Manuscript\" target='_blank'>Authors' Accepted Manuscript</a> is also available open access We continue to carry out new analyses using data collected through this website, and aim to continue disseminating our findings amongst the conservation community."
-  
+
   survey_warning:
       title: 'Welcome to the Future of Conservation survey'
       description: 'This project has been approved by the Research Ethics committee at the University of Leeds.<br><br>Your responses will contribute to the ongoing Future of Conservation Survey research project. All data gathered for this project will be stored securely by the UN Environment World Conservation Monitoring Centre. This dataset will only be used for the purposes of academic research. An anonymised version of the dataset, excluding all personal information which could potentially lead to the identification of individual responses, may be shared with other researchers.<br><br>Your individual responses will not be identifiable either in this website or in subsequent publications. If you provide your email address, the project team will not share it with other parties, and will only use it to send you summarised results and to invite you to participate in future versions of the survey.<br><br>Your responses will be also be made available to the Group and Organisation Future of Conservation Survey (GO-FOX) user who sent you the link for this survey. The GO-FOX tool is intended to support education and organisational capacity development, but the project team do not accept responsibility for how the person sending you the survey uses or distributes responses. You may be identifiable to the GO-FOX user by your responses. If you are not comfortable with this, please do not take the survey.'
       master_description: 'This project has been approved by the Research Ethics committee at the University of Leeds.<br><br>Your responses will contribute to the ongoing Future of Conservation Survey research project. All data gathered for this project will be stored securely by UN Environment World Conservation Monitoring Centre, and used solely for the purposes of academic research. An anonymised version of the dataset, excluding all personal information which could potentially lead to the identification of individual responses, may be shared with other researchers.<br><br>Your individual responses will not be identifiable either in this website or in subsequent publications. If you provide your email address, the project team will not share it with other parties, and will only use it to send you summarised results and to invite you to participate in future versions of the survey.'
-  
+
   sign_up_warning:
       title: 'Welcome to GO-FOX'
       description: 'This project has been approved by the Research Ethics committee at the University of Leeds.<br><br>As you set up your account and survey(s), we will ask some questions about you, your group or organisation, and why you want to use the GO-FOX tool. This will allow us to understand how the tool is being used and the impact it is having. It will also allow us to better understand the views of conservationists, and how these vary according to the characteristics of their group or organisation.<br><br>All data gathered for this project will be stored securely by UN Environment World Conservation Monitoring Centre. An anonymised version of the dataset, excluding all information which could potentially lead to the identification of individual groups or organisations, may be shared with other researchers.<br><br>Your responses will not be identifiable either in this website or in subsequent publications. If you provide your email address, the project team will not share it with other parties, and will only use it to contact you to discuss your use of GO-FOX (for example, to offer help with preparing materials for a session with your group of survey respondents). In any resulting publications, we will remove identifying features and take other measures such as aggregating responses to protect the anonymity of organisations and groups who participate in this survey.<br><br>The GO-FOX tool was developed to help measure and understand the views held by conservationists. We encourage you to use it responsibly, such as in education, training or strategy development. The GO-FOX project team do not accept responsibility for how you or your organisation uses or distributes responses. We expect users to carefully consider the implications of how the tool is used within their group or organisation, particularly the implications for participants of revealing divergent or minority opinions.'
@@ -394,7 +429,7 @@ en:
 
       <p><em>Market ecocentrism:</em></p>
       <ul class="static-page__bibliography-list"><li>Wilson, E.O. Half-Earth: Our Planet’s Fight for Life. New York: Liveright Publishing Corporation, 2016.</li></ul>'
-  
+
   results:
     header: Your results
     chart:
