--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -79,9 +79,13 @@ fr:
     "Yes, as a practitioner": "Yes, as a practitioner"
     "Yes, both as a researcher and as a practitioner": "Yes, both as a researcher and as a practitioner"
     "Values of family and friends during childhood": "Values of family and friends during childhood"
+    "Values of family and friends during adulthood": "Values of family and friends during adulthood"
     "Outdoor play/recreation during childhood": "Outdoor play/recreation during childhood"
+    "Outdoor play/recreation during adulthood": "Outdoor play/recreation during adulthood"
     "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during childhood"
+    "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during adulthood": "Indoor experiences (e.g. reading books, watching documentaries, playing video games) during adulthood"
     "Formal education experience (e.g. field trip, classroom session) during childhood": "Formal education experience (e.g. field trip, classroom session) during childhood"
+    "Formal education experience (e.g. field trip, classroom session) during adulthood": "Formal education experience (e.g. field trip, classroom session) during adulthood"
     "Professional experience during adulthood": "Professional experience during adulthood"
     "None of the above": "None of the above"
 
