add homepage hero text to yaml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,6 +132,9 @@ en:
       description: 'To get started, just <a href="/users/sign_up?locale=en" title="register your GO-FOX account">register your GO-FOX account</a> and start creating surveys!'
 
   homepage:
+    hero:
+      title: Inform debates on the future of conservation
+      tagline: Give your views on conservation on a range of issues, see how you compare to others and contribute your views to shape future debates.
     intro:
       title: 'The Future of Conservation Survey'
       content: '<p>There have long been debates regarding the future direction of biodiversity conservation, but these have tended to be dominated by a few powerful individuals.</p>
