--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -130,6 +130,9 @@ fr:
       icon: 'icons/icon-analyse.svg'
       description: 'To get started, just <a href="/users/sign_up?locale=en" title="register your GO-FOX account">register your GO-FOX account</a> and start creating surveys!'
   homepage:
+    hero:
+      title: Inform debates on the future of conservation
+      tagline: Give your views on conservation on a range of issues, see how you compare to others and contribute your views to shape future debates.
     intro:
       title: 'le Future avec la Conservation frances'
       content: '<p>Bien que des débats concernant les directions futures de la conservation de la biodiversité aient eu lieu depuis longtemps, ceux-ci ont eu tendance à être dominés par quelques personnalités importantes. </p>
